pkg/ibmvpc/examples/out/explain_out/NACLQueryConnectionRules2_all_vpcs_explain.txt
Connectivity explanation between vsi1-ky[10.240.10.4] and 161.26.0.0/16
The following connection exists between vsi1-ky[10.240.10.4] and Public Internet 161.26.0.0/16: All Connections; its enabled by
External Router PublicGateway: public-gw-ky
Egress:
~~~~~~~
security group sg1-ky allows connection with the following allow rules
	index: 0, direction: outbound, protocol: all, cidr: 0.0.0.0/0
network ACL acl1-ky allows connection with the following allow rules
	index: 1, direction: outbound , src: 10.240.10.0/24 , dst: 161.26.0.0/16, conn: protocol: udp, srcPorts: 1-65535, dstPorts: 1-65535, action: allow
	index: 2, direction: outbound , src: 10.240.10.0/24 , dst: 161.26.0.0/16, conn: all, action: allow
